@@ -3,58 +3,50 @@ package com.xbrowse.service;
 import com.xbrowse.dto.PasswordChangeRequest;
 import com.xbrowse.dto.UserDTO;
 import com.xbrowse.entity.User;
-import com.xbrowse.repository.UserRepository;
+import com.xbrowse.entity.UserDirectory;
 import com.xbrowse.repository.UserDirectoryRepository;
+import com.xbrowse.repository.UserRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 用户管理服务
+ * <p>
+ * 负责用户 CRUD、改密、浏览目录权限（user_directory）维护。
  */
 @Service
+@RequiredArgsConstructor
 public class UserService {
 
     private final UserRepository userRepository;
     private final UserDirectoryRepository userDirectoryRepository;
     private final PasswordEncoder passwordEncoder;
 
-    public UserService(UserRepository userRepository,
-                       UserDirectoryRepository userDirectoryRepository,
-                       PasswordEncoder passwordEncoder) {
-        this.userRepository = userRepository;
-        this.userDirectoryRepository = userDirectoryRepository;
-        this.passwordEncoder = passwordEncoder;
-    }
-
     /**
-     * 获取当前登录用户
+     * 获取当前登录用户实体
      */
     public User getCurrentUser() {
         return (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
     }
 
     /**
-     * 获取所有用户列表
+     * 获取所有用户列表（含 directoryIds）
      */
     public List<UserDTO> listUsers() {
-        return userRepository.findAll().stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+        return userRepository.findAll().stream().map(this::toDTO).toList();
     }
 
     /**
      * 根据 ID 获取用户
      */
     public UserDTO getUser(Long id) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("用户不存在"));
-        return toDTO(user);
+        return toDTO(userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("用户不存在")));
     }
 
     /**
@@ -65,31 +57,25 @@ public class UserService {
         if (userRepository.existsByUsername(username)) {
             throw new RuntimeException("用户名已存在");
         }
-
         User user = new User();
         user.setUsername(username);
         user.setPassword(passwordEncoder.encode(password));
         user.setDisplayName(displayName);
-        user.setAdmin(admin != null && admin);
+        user.setAdmin(Boolean.TRUE.equals(admin));
         user.setEnabled(true);
-
-        user = userRepository.save(user);
-        return toDTO(user);
+        return toDTO(userRepository.save(user));
     }
 
     /**
-     * 更新用户
+     * 更新用户显示名与启用状态
      */
     @Transactional
     public UserDTO updateUser(Long id, String displayName, Boolean enabled) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("用户不存在"));
-
         user.setDisplayName(displayName);
         user.setEnabled(enabled);
-
-        user = userRepository.save(user);
-        return toDTO(user);
+        return toDTO(userRepository.save(user));
     }
 
     /**
@@ -101,44 +87,37 @@ public class UserService {
     }
 
     /**
-     * 修改密码
+     * 当前用户修改密码（需校验原密码）
      */
     @Transactional
     public void changePassword(PasswordChangeRequest request) {
         User user = getCurrentUser();
-
-        // 验证旧密码
         if (!passwordEncoder.matches(request.getOldPassword(), user.getPassword())) {
             throw new RuntimeException("原密码错误");
         }
-
         user.setPassword(passwordEncoder.encode(request.getNewPassword()));
         userRepository.save(user);
     }
 
     /**
-     * 管理员重置用户密码
+     * 管理员重置指定用户密码
      */
     @Transactional
     public void resetPassword(Long userId, String newPassword) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("用户不存在"));
-
         user.setPassword(passwordEncoder.encode(newPassword));
         userRepository.save(user);
     }
 
     /**
-     * 更新用户目录权限
+     * 更新用户可访问的浏览目录权限（全量替换）
      */
     @Transactional
     public void updateUserDirectories(Long userId, List<Long> directoryIds) {
-        // 先删除原有权限
         userDirectoryRepository.deleteByUserId(userId);
-
-        // 添加新权限
         for (Long directoryId : directoryIds) {
-            com.xbrowse.entity.UserDirectory ud = new com.xbrowse.entity.UserDirectory();
+            UserDirectory ud = new UserDirectory();
             ud.setUserId(userId);
             ud.setDirectoryId(directoryId);
             userDirectoryRepository.save(ud);
@@ -146,33 +125,30 @@ public class UserService {
     }
 
     /**
-     * 获取用户有权限的目录 ID 列表
+     * 获取用户有权限的浏览目录 ID 列表
      */
     public List<Long> getUserDirectoryIds(Long userId) {
         return userDirectoryRepository.findDirectoryIdsByUserId(userId);
     }
 
     /**
-     * 验证用户是否有目录权限
+     * 当前用户信息（不含 directoryIds，保持 /api/auth/me 原有字段）
      */
-    public boolean hasDirectoryPermission(Long userId, Long directoryId) {
-        User user = userRepository.findById(userId).orElse(null);
-        if (user != null && user.getAdmin()) {
-            return true; // 管理员有所有权限
-        }
-        return userDirectoryRepository.existsByUserIdAndDirectoryId(userId, directoryId);
-    }
-
-    /**
-     * 实体转 DTO
-     */
-    private UserDTO toDTO(User user) {
+    public UserDTO toCurrentUserDTO(User user) {
         UserDTO dto = new UserDTO();
         dto.setId(user.getId());
         dto.setUsername(user.getUsername());
         dto.setDisplayName(user.getDisplayName());
         dto.setAdmin(user.getAdmin());
         dto.setEnabled(user.getEnabled());
+        return dto;
+    }
+
+    /**
+     * 管理端用户 DTO（含最后登录时间与目录权限）
+     */
+    private UserDTO toDTO(User user) {
+        UserDTO dto = toCurrentUserDTO(user);
         dto.setLastLoginTime(user.getLastLoginTime());
         dto.setDirectoryIds(getUserDirectoryIds(user.getId()));
         return dto;
